Heavily refactored IIIF support.
Cleaned up IIIF Image API support removing most unused or unnecessary structures.
This breaks support for the IIIF Discovery and Presentation APIs, since these have not been refactored accordingly.